@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -181,7 +181,7 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 	 */
 	@Override
 	protected Object doGetValue() {
-		return new Integer(selection);
+		return Integer.valueOf(selection);
 	}
 
 	@Override
@@ -258,8 +258,7 @@ public class ComboBoxCellEditor extends AbstractComboBoxCellEditor {
 			// Only format if the 'index' is valid
 			if (items.length > 0 && selection >= 0 && selection < items.length) {
 				// try to insert the current value into the error message.
-				setErrorMessage(MessageFormat.format(getErrorMessage(),
-						new Object[] { items[selection] }));
+				setErrorMessage(MessageFormat.format(getErrorMessage(), items[selection]));
 			} else {
 				// Since we don't have a valid index, assume we're using an
 				// 'edit'
