@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -29,18 +29,14 @@ import org.eclipse.swt.custom.ScrolledComposite;
 import org.eclipse.swt.dnd.Clipboard;
 import org.eclipse.swt.dnd.TextTransfer;
 import org.eclipse.swt.dnd.Transfer;
-import org.eclipse.swt.events.DisposeEvent;
-import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.events.FocusEvent;
 import org.eclipse.swt.events.FocusListener;
 import org.eclipse.swt.events.MenuEvent;
 import org.eclipse.swt.events.MenuListener;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseListener;
-import org.eclipse.swt.events.MouseMoveListener;
 import org.eclipse.swt.events.MouseTrackListener;
 import org.eclipse.swt.events.PaintEvent;
-import org.eclipse.swt.events.PaintListener;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.events.SelectionListener;
@@ -200,7 +196,7 @@ public class FormText extends Canvas {
 
 	private FormTextModel model;
 
-	private ListenerList listeners;
+	private ListenerList<IHyperlinkListener> listeners;
 
 	private Hashtable<String, Object> resourceTable = new Hashtable<>();
 
@@ -365,52 +361,38 @@ public class FormText extends Canvas {
 		super(parent, SWT.NO_BACKGROUND | SWT.WRAP | style);
 		setLayout(new FormTextLayout());
 		model = new FormTextModel();
-		addDisposeListener(new DisposeListener() {
-			@Override
-			public void widgetDisposed(DisposeEvent e) {
-				model.dispose();
-				disposeResourceTable(true);
+		addDisposeListener(e -> {
+			model.dispose();
+			disposeResourceTable(true);
+		});
+		addPaintListener(e -> paint(e));
+		addListener(SWT.KeyDown, e -> {
+			if (e.character == '\r') {
+				activateSelectedLink();
+				return;
 			}
 		});
-		addPaintListener(new PaintListener() {
-			@Override
-			public void paintControl(PaintEvent e) {
-				paint(e);
+		addListener(SWT.Traverse, e -> {
+			if (DEBUG_FOCUS)
+				System.out.println("Traversal: " + e); //$NON-NLS-1$
+			switch (e.detail) {
+			case SWT.TRAVERSE_PAGE_NEXT:
+			case SWT.TRAVERSE_PAGE_PREVIOUS:
+			case SWT.TRAVERSE_ARROW_NEXT:
+			case SWT.TRAVERSE_ARROW_PREVIOUS:
+				e.doit = false;
+				return;
 			}
-		});
-		addListener(SWT.KeyDown, new Listener() {
-			@Override
-			public void handleEvent(Event e) {
-				if (e.character == '\r') {
-					activateSelectedLink();
-					return;
-				}
+			if (!model.hasFocusSegments()) {
+				e.doit = true;
+				return;
 			}
-		});
-		addListener(SWT.Traverse, new Listener() {
-			@Override
-			public void handleEvent(Event e) {
-				if (DEBUG_FOCUS)
-					System.out.println("Traversal: " + e); //$NON-NLS-1$
-				switch (e.detail) {
-				case SWT.TRAVERSE_PAGE_NEXT:
-				case SWT.TRAVERSE_PAGE_PREVIOUS:
-				case SWT.TRAVERSE_ARROW_NEXT:
-				case SWT.TRAVERSE_ARROW_PREVIOUS:
-					e.doit = false;
-					return;
-				}
-				if (!model.hasFocusSegments()) {
-					e.doit = true;
-					return;
-				}
-				if (e.detail == SWT.TRAVERSE_TAB_NEXT)
-					e.doit = advance(true);
-				else if (e.detail == SWT.TRAVERSE_TAB_PREVIOUS)
-					e.doit = advance(false);
-				else if (e.detail != SWT.TRAVERSE_RETURN)
-					e.doit = true;
-			}
+			if (e.detail == SWT.TRAVERSE_TAB_NEXT)
+				e.doit = advance(true);
+			else if (e.detail == SWT.TRAVERSE_TAB_PREVIOUS)
+				e.doit = advance(false);
+			else if (e.detail != SWT.TRAVERSE_RETURN)
+				e.doit = true;
 		});
 		addFocusListener(new FocusListener() {
 			@Override
@@ -476,12 +458,7 @@ public class FormText extends Canvas {
 				handleMouseHover(e);
 			}
 		});
-		addMouseMoveListener(new MouseMoveListener() {
-			@Override
-			public void mouseMove(MouseEvent e) {
-				handleMouseMove(e);
-			}
-		});
+		addMouseMoveListener(e -> handleMouseMove(e));
 		initAccessible();
 		ensureBoldFontPresent(getFont());
 		createMenu();
@@ -717,36 +694,32 @@ public class FormText extends Canvas {
 		Paragraph[] paragraphs = model.getParagraphs();
 		if (paragraphs == null)
 			return;
-		Listener listener = new Listener() {
-			@Override
-			public void handleEvent(Event e) {
-				switch (e.type) {
-				case SWT.FocusIn:
-					if (!controlFocusTransfer)
-						syncControlSegmentFocus((Control) e.widget);
-					break;
-				case SWT.Traverse:
-					if (DEBUG_FOCUS)
-						System.out.println("Control traversal: " + e); //$NON-NLS-1$
-					switch (e.detail) {
-					case SWT.TRAVERSE_PAGE_NEXT:
-					case SWT.TRAVERSE_PAGE_PREVIOUS:
-					case SWT.TRAVERSE_ARROW_NEXT:
-					case SWT.TRAVERSE_ARROW_PREVIOUS:
-						e.doit = false;
-						return;
-					}
-					Control c = (Control) e.widget;
-					ControlSegment segment = (ControlSegment) c
-							.getData(CONTROL_KEY);
-					if (e.detail == SWT.TRAVERSE_TAB_NEXT)
-						e.doit = advanceControl(c, segment, true);
-					else if (e.detail == SWT.TRAVERSE_TAB_PREVIOUS)
-						e.doit = advanceControl(c, segment, false);
-					if (!e.doit)
-						e.detail = SWT.TRAVERSE_NONE;
-					break;
+		Listener listener = e -> {
+			switch (e.type) {
+			case SWT.FocusIn:
+				if (!controlFocusTransfer)
+					syncControlSegmentFocus((Control) e.widget);
+				break;
+			case SWT.Traverse:
+				if (DEBUG_FOCUS)
+					System.out.println("Control traversal: " + e); //$NON-NLS-1$
+				switch (e.detail) {
+				case SWT.TRAVERSE_PAGE_NEXT:
+				case SWT.TRAVERSE_PAGE_PREVIOUS:
+				case SWT.TRAVERSE_ARROW_NEXT:
+				case SWT.TRAVERSE_ARROW_PREVIOUS:
+					e.doit = false;
+					return;
 				}
+				Control c = (Control) e.widget;
+				ControlSegment segment = (ControlSegment) c.getData(CONTROL_KEY);
+				if (e.detail == SWT.TRAVERSE_TAB_NEXT)
+					e.doit = advanceControl(c, segment, true);
+				else if (e.detail == SWT.TRAVERSE_TAB_PREVIOUS)
+					e.doit = advanceControl(c, segment, false);
+				if (!e.doit)
+					e.detail = SWT.TRAVERSE_NONE;
+				break;
 			}
 		};
 		for (Paragraph p : paragraphs) {
@@ -981,7 +954,7 @@ public class FormText extends Canvas {
 	 */
 	public void addHyperlinkListener(IHyperlinkListener listener) {
 		if (listeners == null)
-			listeners = new ListenerList();
+			listeners = new ListenerList<>();
 		listeners.add(listener);
 	}
 
@@ -1276,7 +1249,7 @@ public class FormText extends Canvas {
 				int linkCount = model.getHyperlinkCount();
 				Object[] children = new Object[linkCount];
 				for (int i = 0; i < linkCount; i++) {
-					children[i] = new Integer(i);
+					children[i] = Integer.valueOf(i);
 				}
 				e.children = children;
 			}
@@ -1527,12 +1500,9 @@ public class FormText extends Canvas {
 	private void enterLink(IHyperlinkSegment link, int stateMask) {
 		if (link == null || listeners == null)
 			return;
-		int size = listeners.size();
 		HyperlinkEvent he = new HyperlinkEvent(this, link.getHref(), link
 				.getText(), stateMask);
-		Object [] listenerList = listeners.getListeners();
-		for (int i = 0; i < size; i++) {
-			IHyperlinkListener listener = (IHyperlinkListener) listenerList[i];
+		for (IHyperlinkListener listener : listeners) {
 			listener.linkEntered(he);
 		}
 	}
@@ -1540,12 +1510,9 @@ public class FormText extends Canvas {
 	private void exitLink(IHyperlinkSegment link, int stateMask) {
 		if (link == null || listeners == null)
 			return;
-		int size = listeners.size();
 		HyperlinkEvent he = new HyperlinkEvent(this, link.getHref(), link
 				.getText(), stateMask);
-		Object [] listenerList = listeners.getListeners();
-		for (int i = 0; i < size; i++) {
-			IHyperlinkListener listener = (IHyperlinkListener) listenerList[i];
+		for (IHyperlinkListener listener : listeners) {
 			listener.linkExited(he);
 		}
 	}
